<?xml version="1.0" encoding="UTF-8"?>

<!--
 Copyright (C) 2017-2019 Nippon Telegraph and Telephone Corporation

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>jp.co.ntt.oss.heapstats</groupId>
    <artifactId>heapstats-plugin-api</artifactId>
    <version>2.2-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>HeapStats Analyzer Plugin API</name>
    <description>The API for HeapStats Analyzer plugins</description>
    <url>http://icedtea.classpath.org/wiki/HeapStats</url>

    <licenses>
        <license>
            <name>GNU General Public License, version 2</name>
            <url>https://www.gnu.org/licenses/gpl-2.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Yasumasa Suenaga</name>
            <email>yasuenag@gmail.com</email>
            <organization>icedtea</organization>
            <organizationUrl>http://www.icedtea.classpath.org</organizationUrl>
        </developer>
        <developer>
            <name>KUBOTA Yuji</name>
            <email>kubota.yuji@gmail.com</email>
            <organization>icedtea</organization>
            <organizationUrl>http://www.icedtea.classpath.org</organizationUrl>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/HeapStats/heapstats</url>
        <connection>scm:git:https://github.com/HeapStats/heapstats.git</connection>
        <developerConnection>scm:git:https://github.com/HeapStats/heapstats.git</developerConnection>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub HeapStats Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/HeapStats/heapstats</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <organization>
        <name>NTT OSS Center</name>
    </organization>

    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>heapstats-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11.0.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <executions>
                    <execution>
                        <id>deploy</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>deploy</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
